objects/Alt_Consultant_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <inlineHelpText>Date that the Meeting, Conference, Call, etc. occured</inlineHelpText>
        <label>Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Enter the notes from the ineteraction.</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact/Rep</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Alt Consultant Activities</relationshipLabel>
        <relationshipName>Alt_Consultant_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FirmOfficeName__c</fullName>
        <formula>Contact__r.FirmOfficeName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Firm/Office Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firm__c</fullName>
        <formula>Contact__r.Firm__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Firm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_up__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to filter on Activities that you would like to follow-up on</inlineHelpText>
        <label>Follow up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesPerson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Person</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.ActivityTerritoryZoneName__c</field>
                <operation>contains</operation>
                <value>MRD,RD1,RD2,RD3</value>
            </filterItems>
            <infoMessage>Search for the sales person that you traveled with.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Alt_Consultant_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Activity type of the interaction.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>CE Presentation</fullName>
                </value>
                <value>
                    <fullName>Conference: Break-out</fullName>
                </value>
                <value>
                    <fullName>Conference: Main Stage</fullName>
                </value>
                <value>
                    <fullName>Meeting 1 on 1</fullName>
                </value>
                <value>
                    <fullName>Meeting group</fullName>
                </value>
                <value>
                    <fullName>Webex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Created to track and report on the Alternative Investment Consultants activities for their analysis</description>
    <label>Alt Consultant Activity</label>
    <nameField>
        <displayFormat>ALTACT-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alt Consultant Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>AllAltConsultantActivities</fullName>
        <columns>NAME</columns>
        <columns>Activity_Date__c</columns>
        <columns>Type__c</columns>
        <columns>FirmOfficeName__c</columns>
        <columns>Contact__c</columns>
        <columns>Comments__c</columns>
        <columns>Follow_up__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Alt Consultant Activities</label>
    </listViews>
    <listViews>
        <fullName>MyAltConsultantActivities</fullName>
        <columns>NAME</columns>
        <columns>Activity_Date__c</columns>
        <columns>Type__c</columns>
        <columns>FirmOfficeName__c</columns>
        <columns>Contact__c</columns>
        <columns>Comments__c</columns>
        <columns>Follow_up__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Alt Consultant Activities</label>
    </listViews>
    <listViews>
        <fullName>MyFollowUpActivities</fullName>
        <columns>NAME</columns>
        <columns>Activity_Date__c</columns>
        <columns>Type__c</columns>
        <columns>FirmOfficeName__c</columns>
        <columns>Contact__c</columns>
        <columns>Comments__c</columns>
        <columns>Follow_up__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Follow_up__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Follow Up Activities</label>
    </listViews>
</CustomObject>